# local-vault

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  cli.py  pyproject.toml
scripts/: bench_xor.py  release_notes.md  validate_timestamps.sh
tests/: test_vault.py
vault/: __init__.py  core.py  storage.py
